# botathon-2025

./: .dockerignore  .gitignore  Dockerfile  PLAN_IMPLEMENTACION.md  README.md  debug_db_connection.py  docker-compose.yml  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml
.next/dev/: prerender-manifest.json  trace
.next/dev/cache/: .rscinfo
.next/dev/server/: app-paths-manifest.json  next-font-manifest.js  (+3 more)
app/: globals.css  layout.tsx  page.tsx
app/asistente/: page.tsx
app/buscador/: page.tsx
app/comunicaciones/: page.tsx
app/configuracion/: page.tsx
app/login/: page.tsx
app/logs/: page.tsx
app/perfil/: page.tsx
app/register/: page.tsx
app/voluntarios/: page.tsx
backend/: Dockerfile  README.md  check_health.py  create_admin.py  create_sample_data.py  debug_start.py  generate_sql_inserts.py  inserts.sql  pyproject.toml  requirements.txt  run.sh  test_auth.py
backend/app/: main.py
backend/app/agents/: db_agent.py  email_agent.py  orchestrator.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: assistant.py  auth.py  bots.py  communications.py  config.py  logs.py  metrics.py  notifications.py  segmentation.py  tasks.py  volunteers.py
backend/app/core/: config.py  security.py
backend/app/models/: log.py  segment.py  task.py
backend/app/schemas/: auth.py  log.py  segment.py  task.py  volunteer.py
backend/app/services/: email_service.py
components/layout/: dashboard-layout.tsx  header.tsx  sidebar.tsx
components/ui/: data-table.tsx  kpi-card.tsx  scroll-area.tsx
lib/: api.ts  mock-data.ts
(+270 files in other folders)
