[tool.poetry]
name = "botathon-backend"
version = "0.1.0"
description = "High-performance Flask backend for Botathon 2025"
authors = ["Antigravity <antigravity@google.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = {extras = ["async"], version = "^3.0.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
alembic = "^1.13.0"
supabase = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
